Add the skip maxpermsize var because java8 doesnt like that option

--- a/gameon.env
+++ b/gameon.env
@@ -16,3 +16,4 @@ PLAYER_URL=https://127.0.0.1/play/players
 LICENSE=accept
 PROXY_DOCKER_HOST=127.0.0.1
 ADMIN_PASSWORD=admin
+WLP_SKIP_MAXPERMSIZE=true
