--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "concierge"]
 	path = concierge
 	url = git@github.com:gameontext/gameon-concierge.git
+[submodule "docs"]
+	path = docs
+	url = git@github.com:gameontext/gameon-docs.git
 [submodule "logstash"]
 	path = logstash
 	url = git@github.com:gameontext/gameon-logstash.git
