--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,18 +2,22 @@ player:
   volumes:
     - '$HOME:$HOME'
     - './player/player-wlpcfg/servers/gameon-player:/opt/ibm/wlp/usr/servers/defaultServer'
+    - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
 
 room:
   volumes:
     - '$HOME:$HOME'
     - './room/room-wlpcfg/servers/gameon-room:/opt/ibm/wlp/usr/servers/defaultServer'
+    - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
 
 concierge:
   volumes:
     - '$HOME:$HOME'
     - './concierge/concierge-wlpcfg/servers/gameon-concierge:/opt/ibm/wlp/usr/servers/defaultServer'
+    - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
 
 mediator:
   volumes:
     - '$HOME:$HOME'
     - './mediator/mediator-wlpcfg/servers/gameon-mediator:/opt/ibm/wlp/usr/servers/defaultServer'
+    - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
