--- a/gameon.env
+++ b/gameon.env
@@ -4,15 +4,20 @@ CONCIERGE_URL=http://concierge:9081/concierge
 CONCIERGE_KEY=Wibble
 REGISTRATION_SECRET=MyRegistrationSecret
 QUERY_SECRET=MyQuerySecret
+#
+MAP_COUCHDB_URL=http://map_couchdb:5984
+MAP_COUCHDB_PASSWORD=myCouchDBSecret
+#
+PLAYER_URL=https://127.0.0.1/play/players
 MONGO_HOST=mongo
 MONGO_PORT=27017
-LOGGING_DOCKER_HOST=
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 SUCCESS_CALLBACK=https://127.0.0.1/#/login/callback
-PLAYER_URL=https://127.0.0.1/play/players
+#
+LOGGING_DOCKER_HOST=
 LICENSE=accept
 PROXY_DOCKER_HOST=127.0.0.1
 ADMIN_PASSWORD=admin
