--- a/gameon.env
+++ b/gameon.env
@@ -6,6 +6,7 @@ REGISTRATION_SECRET=MyRegistrationSecret
 QUERY_SECRET=MyQuerySecret
 #
 MAP_COUCHDB_URL=http://map_couchdb:5984
+MAP_COUCHDB_USER=mapUser
 MAP_COUCHDB_PASSWORD=myCouchDBSecret
 #
 PLAYER_URL=https://127.0.0.1/play/players
@@ -22,3 +23,8 @@ LICENSE=accept
 PROXY_DOCKER_HOST=127.0.0.1
 ADMIN_PASSWORD=admin
 WLP_SKIP_MAXPERMSIZE=true
+
+# For local development, continue to have server output write to the
+# (mounted) servers directory
+WLP_OUTPUT_DIR=/opt/ibm/wlp/usr/servers/
+LOG_DIR=/opt/ibm/wlp/usr/servers/defaultServer/logs
