--- a/gameon.env
+++ b/gameon.env
@@ -1,13 +1,17 @@
 service_concierge=http://concierge:9081/concierge/registerRoom
 service_room=ws://room:9080/rooms
 CONCIERGE_URL=http://concierge:9081/concierge
+CONCIERGE_PLAYER_URL=https://player:9443/play/players
 CONCIERGE_KEY=Wibble
 REGISTRATION_SECRET=MyRegistrationSecret
 QUERY_SECRET=MyQuerySecret
 #
-MAP_COUCHDB_URL=http://map_couchdb:5984
+MAP_COUCHDB_URL=http://couchdb:5984
 MAP_COUCHDB_USER=mapUser
 MAP_COUCHDB_PASSWORD=myCouchDBSecret
+COUCHDB_URL=http://couchdb:5984
+COUCHDB_USER=mapUser
+COUCHDB_PASSWORD=myCouchDBSecret
 #
 PLAYER_URL=https://127.0.0.1/play/players
 MONGO_HOST=mongo
