--- a/gameon.env
+++ b/gameon.env
@@ -6,6 +6,8 @@ CONCIERGE_PLAYER_MODE=development
 CONCIERGE_KEY=Wibble
 REGISTRATION_SECRET=MyRegistrationSecret
 QUERY_SECRET=MyQuerySecret
+MAP_URL=http://map:9090/map/v1/sites
+MAP_KEY=fish
 #
 MAP_COUCHDB_URL=http://couchdb:5984
 MAP_COUCHDB_USER=mapUser
