--- a/gameon.env
+++ b/gameon.env
@@ -1,5 +1,7 @@
 service_concierge=http://concierge:9080/concierge/registerRoom
+service_map=http://map:9080/map/v1/sites
 service_room=ws://room:9080/rooms
+service_simpleroom=ws://simpleroom:9090/rooms
 CONCIERGE_URL=http://concierge:9080/concierge
 CONCIERGE_PLAYER_URL=https://player:9443/play/players
 CONCIERGE_PLAYER_MODE=development
@@ -9,6 +11,9 @@ QUERY_SECRET=MyQuerySecret
 MAP_URL=http://map:9080/map/v1/sites
 MAP_KEY=fish
 #
+MAP_COUCHDB_URL=http://couchdb:5984
+MAP_COUCHDB_USER=mapUser
+MAP_COUCHDB_PASSWORD=myCouchDBSecret
 COUCHDB_URL=http://couchdb:5984
 COUCHDB_USER=mapUser
 COUCHDB_PASSWORD=myCouchDBSecret
