Add missing env vars

--- a/gameon.env
+++ b/gameon.env
@@ -9,6 +9,8 @@ CONCIERGE_KEY=Wibble
 REGISTRATION_SECRET=MyRegistrationSecret
 QUERY_SECRET=MyQuerySecret
 MAP_URL=http://map:9080/map/v1/sites
+MAP_PLAYER_URL=https://player:9443/play/players
+MAP_PLAYER_MODE=development
 MAP_KEY=fish
 #
 MAP_COUCHDB_URL=http://couchdb:5984
