Add mediator player url

--- a/gameon.env
+++ b/gameon.env
@@ -10,6 +10,7 @@ REGISTRATION_SECRET=MyRegistrationSecret
 QUERY_SECRET=MyQuerySecret
 MAP_URL=http://map:9080/map/v1/sites
 MAP_PLAYER_URL=https://player:9443/play/players
+MEDIATOR_PLAYER_URL=https://player:9443/play/players
 MAP_PLAYER_MODE=development
 MAP_KEY=fish
 #
