Add new env vars
Adds the system id env var, and the fail callback env var

--- a/gameon.env
+++ b/gameon.env
@@ -33,7 +33,9 @@ GOOGLE_APP_SECRET=
 GITHUB_APP_ID=
 GITHUB_APP_SECRET=
 SUCCESS_CALLBACK=https://127.0.0.1/#/login/callback
+FAIL_CALLBACK=https://127.0.0.1/#/game
 #
+SYSTEM_ID=game-on.org
 LOGGING_DOCKER_HOST=
 LICENSE=accept
 PROXY_DOCKER_HOST=127.0.0.1
