Add sweep local id and secrets
Signed-off-by: iain <iain@uk.ibm.com>

--- a/gameon.env
+++ b/gameon.env
@@ -46,3 +46,7 @@ WLP_SKIP_MAXPERMSIZE=true
 # (mounted) servers directory
 WLP_OUTPUT_DIR=/opt/ibm/wlp/usr/servers/
 LOG_DIR=/opt/ibm/wlp/usr/servers/defaultServer/logs
+
+# Sweep
+SWEEP_ID=sweep
+SWEEP_SECRET=sweepSecret
