add kafka env vars for running locally
Signed-off-by: Ozzy Osborne <ozzy@ca.ibm.com>

--- a/gameon.env
+++ b/gameon.env
@@ -14,6 +14,9 @@ MEDIATOR_PLAYER_URL=https://player:9443/play/players
 MAP_PLAYER_MODE=development
 MAP_KEY=fish
 #
+KAFKA_URL=kafka:9092
+KAFKA_USER=
+KAFKA_PASSWORD=
 MAP_COUCHDB_URL=http://couchdb:5984
 MAP_COUCHDB_USER=mapUser
 MAP_COUCHDB_PASSWORD=myCouchDBSecret
