--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,17 @@ webapp:
   - "8080:8080"
  env_file: gameon.${DOCKER_MACHINE_NAME}env
 
+auth:
+ build: auth/auth-wlpcfg
+ volumes:
+  - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
+ links:
+  - kafka
+ ports:
+  - "9089:9080"
+  - "9449:9443"
+ env_file: gameon.${DOCKER_MACHINE_NAME}env
+
 player:
  # build: player/player-wlpcfg
  image: gameontext/gameon-player
@@ -65,6 +76,7 @@ proxy:
  image: gameontext/gameon-proxy
  env_file: gameon.${DOCKER_MACHINE_NAME}env
  links:
+  - auth
   - webapp
   - player
   - room
