--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'gameon'
 
+include 'auth:auth-app'
+include 'auth:auth-wlpcfg'
 include 'player:player-app'
 include 'player:player-wlpcfg'
 include 'map:map-app'
