--- a/gameon.env
+++ b/gameon.env
@@ -9,8 +9,8 @@ CONCIERGE_KEY=Wibble
 REGISTRATION_SECRET=MyRegistrationSecret
 QUERY_SECRET=MyQuerySecret
 MAP_URL=http://map:9080/map/v1/sites
-MAP_PLAYER_URL=https://player:9443/play/players
-MEDIATOR_PLAYER_URL=https://player:9443/play/players
+MAP_PLAYER_URL=https://player:9443/players/v1/accounts
+MEDIATOR_PLAYER_URL=https://player:9443/players/v1/accounts
 MAP_PLAYER_MODE=development
 MAP_KEY=fish
 #
@@ -24,7 +24,7 @@ COUCHDB_URL=http://couchdb:5984
 COUCHDB_USER=mapUser
 COUCHDB_PASSWORD=myCouchDBSecret
 #
-PLAYER_URL=https://127.0.0.1/play/players
+PLAYER_URL=https://127.0.0.1/players/v1/accounts
 MONGO_HOST=mongo
 MONGO_PORT=27017
 TWITTER_CONSUMER_KEY=
