--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "map"]
 	path = map
 	url = https://github.com/gameontext/gameon-map.git
+[submodule "auth"]
+	path = auth
+	url = https://github.com/gameontext/gameon-auth.git
