--- a/gameon.env
+++ b/gameon.env
@@ -7,7 +7,7 @@ service_simpleroom=ws://simpleroom:9090/rooms
 #Urls used to talk between services
 #####################################
 
-#a8 local proxy, which uses non http on the localhost link.
+#a8 local proxy, which uses http (not https) on the localhost link.
 MAP_SERVICE_URL=http://127.0.0.1:6379/map/map/v1/sites
 PLAYER_SERVICE_URL=http://127.0.0.1:6379/players/players/players/v1/accounts
 
