--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
+##Game on Services.. 
+## Any service registering as an a8 service should have 
+## external_links:
+##  - kafka
+##  - registry
+##  - logstash
+##  - controller
+## as part of it's docker compose config. This allows the a8
+## sidecar to communicate with the a8 registry etc. 
+## (urls for a8 are set within the gameon.env file, assuming
+##  these external links are present)
+
 auth:
- build: auth/auth-wlpcfg
+ #build: auth/auth-wlpcfg
+ image: gameontext/gameon-auth
  volumes:
   - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
  external_links:
@@ -13,7 +26,8 @@ auth:
  env_file: gameon.${DOCKER_MACHINE_NAME}env
 
 player:
- build: player/player-wlpcfg
+ #build: player/player-wlpcfg
+ image: gameontext/gameon-player
  volumes:
   - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
  external_links:
@@ -29,7 +43,8 @@ player:
  env_file: gameon.${DOCKER_MACHINE_NAME}env
 
 map:
- build: map/map-wlpcfg
+ #build: map/map-wlpcfg
+ image: gameontext/gameon-map
  volumes:
   - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
  external_links:
@@ -44,7 +59,8 @@ map:
  env_file: gameon.${DOCKER_MACHINE_NAME}env
 
 mediator:
- build: mediator/mediator-wlpcfg
+ #build: mediator/mediator-wlpcfg
+ image: gameontext/gameon-mediator
  volumes:
   - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
  ports:
@@ -60,7 +76,8 @@ mediator:
  env_file: gameon.${DOCKER_MACHINE_NAME}env
 
 proxy:
- build: proxy
+ #build: proxy
+ image: gameontext/gameon-proxy
  env_file: gameon.${DOCKER_MACHINE_NAME}env
  links:
   - webapp
@@ -76,14 +93,15 @@ proxy:
   - "1936:1936"
 
 webapp:
- build: webapp
- # image: gameontext/gameon-webapp
+ #build: webapp
+ image: gameontext/gameon-webapp
  ports:
   - "8080:8080"
  env_file: gameon.${DOCKER_MACHINE_NAME}env
 
 room:
- build: room/room-wlpcfg
+ #build: room/room-wlpcfg
+ image: gameontext/gameon-room
  links:
   - map
  external_links:
