lower a8 log level, include docker-override
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/gameon.env
+++ b/gameon.env
@@ -65,4 +65,4 @@ A8_CONTROLLER_POLL=5s
 A8_LOGSTASH_SERVER='logstash:8092'
 A8_KAFKA_BROKER=kafka:9092
 A8_REGISTER=true
-A8_LOG_LEVEL=debug
+A8_LOG_LEVEL=info
