--- a/gameon.env
+++ b/gameon.env
@@ -1,6 +1,6 @@
 #Urls used by simpleroom and room to register, and know what their websocket address is.
 #####################################
-service_map=http://map:9080/map/v1/sites
+service_map=https://map:9443/map/v1/sites
 service_room=ws://room:9080/rooms
 service_simpleroom=ws://simpleroom:9090/rooms
 
