UseCA Instead of SelfSigned
Signed-off-by: Ozzy Osborne <ozzy@ca.ibm.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,8 @@ mediator:
 proxy:
  #build: proxy
  image: gameontext/gameon-proxy
+ volumes:
+  - './keystore:/keystore'
  env_file: gameon.${DOCKER_MACHINE_NAME}env
  links:
   - webapp
