add new front end auth url
And merge cacerts into truststore

Signed-off-by: Ozzy Osborne <ozzy@ca.ibm.com>

--- a/gameon.env
+++ b/gameon.env
@@ -24,6 +24,8 @@ FRONT_END_PLAYER_URL=https://127.0.0.1/players/v1/accounts
 #External urls for redirecting browser to after login.
 FRONT_END_SUCCESS_CALLBACK=https://127.0.0.1/#/login/callback
 FRONT_END_FAIL_CALLBACK=https://127.0.0.1/#/game
+#Used to form the callback urls sent to google/twitter etc
+FRONT_END_AUTH_URL=https://127.0.0.1/auth
 
 #Global configuration vars..
 #####################################
