--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -1,38 +1,53 @@
-auth:
-  build: auth/auth-wlpcfg
+version: '2'
 
-map:
-  build: map/map-wlpcfg
-  volumes:
-    - '$HOME:$HOME'
-    - './map/map-wlpcfg/servers/gameon-map:/opt/ibm/wlp/usr/servers/defaultServer'
-    - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
+services:
 
-mediator:
-  build: mediator/mediator-wlpcfg
-  volumes:
-    - '$HOME:$HOME'
-    - './mediator/mediator-wlpcfg/servers/gameon-mediator:/opt/ibm/wlp/usr/servers/defaultServer'
-    - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
+  auth:
+    build:
+      context: auth/auth-wlpcfg
+  
+  map:
+    build:
+      context: map/map-wlpcfg
+    volumes:
+      - '$HOME:$HOME'
+      - './map/map-wlpcfg/servers/gameon-map:/opt/ibm/wlp/usr/servers/defaultServer'
+      - 'keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
+  
+  mediator:
+    build:
+      context: mediator/mediator-wlpcfg
+    volumes:
+      - '$HOME:$HOME'
+      - './mediator/mediator-wlpcfg/servers/gameon-mediator:/opt/ibm/wlp/usr/servers/defaultServer'
+      - 'keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
+  
+  player:
+    build:
+      context: player/player-wlpcfg
+    volumes:
+      - '$HOME:$HOME'
+      - './player/player-wlpcfg/servers/gameon-player:/opt/ibm/wlp/usr/servers/defaultServer'
+      - 'keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
+  
+  proxy:
+    build:
+      context: proxy
+  
+  room:
+    build:
+      context: room/room-wlpcfg
+    volumes:
+      - '$HOME:$HOME'
+      - './room/room-wlpcfg/servers/gameon-room:/opt/ibm/wlp/usr/servers/defaultServer'
+      - 'keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
+  
+  webapp:
+    build:
+      context: webapp
+    volumes:
+      - './webapp/src:/opt/www'
 
-player:
-  build: player/player-wlpcfg
-  volumes:
-    - '$HOME:$HOME'
-    - './player/player-wlpcfg/servers/gameon-player:/opt/ibm/wlp/usr/servers/defaultServer'
-    - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
-
-proxy:
-  build: proxy
-
-room:
-  build: room/room-wlpcfg
-  volumes:
-    - '$HOME:$HOME'
-    - './room/room-wlpcfg/servers/gameon-room:/opt/ibm/wlp/usr/servers/defaultServer'
-    - './keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
-
-webapp:
-  build: webapp
-  volumes:
-    - './webapp/src:/opt/www'
+volumes:
+  keystore:
+    external: true
