Introduce TARGET_PLATFORM vs. GAMEON_MODE
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/gameon.env
+++ b/gameon.env
@@ -30,6 +30,8 @@ FRONT_END_AUTH_URL=https://127.0.0.1/auth
 #Global configuration vars..
 #####################################
 GAMEON_MODE=development
+TARGET_PLATFORM=local
+
 SYSTEM_ID=game-on.org
 LOGGING_DOCKER_HOST=
 LICENSE=accept
