--- a/.editorconfig
+++ b/.editorconfig
@@ -11,11 +11,12 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 
-[*.{md,sh}]
+[*.{md}]
 indent_size = 2
+trim_trailing_whitespace = false
 
 [*.java]
 indent_size = 4
 
-[*.{html,js,rb,css,xml}]
+[*.{html,js,rb,css,xml,sh,yml}]
 indent_size = 2
