allow testing swagger
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,6 +126,15 @@ services:
       - "9445:9443"
     env_file: gameon.${DOCKER_MACHINE_NAME}env
 
+  swagger:
+    #build:
+    #  context: swagger
+    image: gameontext/gameon-swagger
+    ports:
+      - "8081:8080"
+    env_file: gameon.${DOCKER_MACHINE_NAME}env
+
+
 volumes:
   keystore:
     external: true
