--- a/docker/platformservices.yml
+++ b/docker/platformservices.yml
@@ -12,62 +12,59 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-## GameOn Local Platform Services ## 
+## GameOn Local Platform Services ##
 
-version: '2'
+version: '2.1'
 
 services:
 
 ###############Integration Bus############
   kafka:
-    image: rshriram/kafka-0.9
+    image: gameontext/docker-kafka
     environment:
-      - ADVERTISED_HOST=kafka
+      - ADVERTISED_HOST=localhost
       - ADVERTISED_PORT=9092
       - AUTO_CREATE_TOPICS=true
     ports:
       - "9092:9092"
-    hostname: kafka
+      - "2181:2181"
     container_name: kafka
-  
-##########ELK Stack##############
-  es:
-    image: elasticsearch
+    healthcheck:
+      test: /opt/kafka_2.11-0.10.1.0/bin/kafka-topics.sh --list --zookeeper localhost:2181
+      timeout: 10s
+      retries: 3
+    networks:
+      - gameontext
+
+#### Redis Backend #########
+  redis:
+    image: redis:alpine
     ports:
-      - 9300
-      - "30200:9200"
-    container_name: elasticsearch
-  logstash:
-    image: logstash
-    command: logstash --verbose -e "input { beats {codec=>'json' port=>8092}} output {elasticsearch {hosts =>'es:9200' codec=>'json'} }"
-    ports:
-      - "8092:8092"
-    links:
-      - es
-    container_name: logstash
-  kibana:
-    image: kibana
-    links:
-      - es
-    environment:
-      - ELASTICSEARCH_URL=http://es:9200
-    ports:
-      - "30500:5601"
-    container_name: kibana
-  
+      - "31400:6379"
+    container_name: redis
+    healthcheck:
+      test: redis-cli ping | grep PONG
+      timeout: 10s
+      retries: 3
+    networks:
+      - gameontext
+
 #######A8 Control Plane###########
-  
+
   registry:
     image: amalgam8/a8-registry
+    depends_on:
+      redis:
+        condition: service_healthy
     ports:
       - "31300:8080"
     container_name: registry
     environment:
       - A8_STORE=redis
       - A8_STORE_ADDRESS=redis:6379
-    links:
-      - redis
-  
+    networks:
+      - gameontext
+
   controller:
     image: amalgam8/a8-controller
     ports:
@@ -76,17 +73,31 @@ services:
       - A8_LOG_LEVEL=info
       - A8_DATABASE_TYPE=redis
       - A8_DATABASE_HOST=redis://redis:6379
-    links:
-      - redis
+    depends_on:
+      redis:
+        condition: service_healthy
     container_name: controller
-  
-#Redis Backend
-  redis:
-    image: redis:alpine
-    ports:
-      - "31400:6379"
-    container_name: redis
-  
+    networks:
+      - gameontext
+
+  a8admin:
+    build:
+      context: ../images/admin
+    volumes:
+      - 'keystore:/keystore'
+    depends_on:
+      - registry
+      - controller
+    healthcheck:
+      test: /usr/local/bin/a8sanity.sh
+      timeout: 10s
+      retries: 3
+    env_file: ../gameon.${DOCKER_MACHINE_NAME}env
+    container_name: a8admin
+    networks:
+      - gameontext
+
+
 ########Gateway##################
   gateway:
     image: amalgam8/a8-sidecar:0.3-alpine
@@ -94,23 +105,28 @@ services:
       - A8_CONTROLLER_URL=http://controller:8080
       - A8_REGISTRY_URL=http://registry:8080
       - A8_PROXY=true
-      - A8_LOG=true
+      - A8_LOG=false
       - A8_SERVICE=gateway
-      - A8_LOGSTASH_SERVER='logstash:8092'
       - A8_CONTROLLER_POLL=5s
       - A8_REGISTRY_POLL=5s
     ports:
       - "32000:6379"
-    links:
-      - logstash
-      - controller
-      - registry
+    depends_on:
+      a8admin:
+        condition: service_healthy
     container_name: gateway
-  
+    networks:
+      - gameontext
+
 ########CouchDB##################
   couchdb:
-   image: klaemo/couchdb:1.6.1
-   ports:
-    - "5984:5984"
-   container_name: couchdb
-
+    image: klaemo/couchdb:1.6.1
+    ports:
+      - "5984:5984"
+    container_name: couchdb
+    healthcheck:
+      test: curl http://localhost:5984/
+      timeout: 10s
+      retries: 3
+    networks:
+      - gameontext
